[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flux-download"
version = "1.0.0"
description = "Adaptive, Explainable File Transfer Engine with Terminal Dashboard"
authors = [{name = "Flux Contributors"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["download", "transfer", "terminal", "tui", "adaptive", "explainable"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: System :: Networking",
    "Topic :: Utilities",
]

dependencies = [
    "textual>=0.47.0",
    "aiohttp>=3.9.0",
    "rich>=13.7.0",
    "click>=8.1.0",
    "aiofiles>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "isort>=5.13.0",
    "mypy>=1.7.0",
    "pyinstaller>=6.3.0",
]

[project.scripts]
flux = "flux.app:main"
flux-cli = "flux.cli:main"

[project.urls]
Homepage = "https://github.com/flux/flux"
Documentation = "https://github.com/flux/flux#readme"
Repository = "https://github.com/flux/flux"
"Bug Tracker" = "https://github.com/flux/flux/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["flux*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["flux/tests"]
asyncio_mode = "auto"
